# splat

./: .gitignore  .splat_access  .travis.yml  AUTHORS  CITATION  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  README  README.md  README.rst  __init__.py  bdevopar.py  db_spexprism.txt  large_files.txt  out1.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  splat.py  splat_db.py  splat_euclid.py  splat_evolve.py  splat_model ver1.py  splat_model.py  splat_plot.py  splat_web.py  test.fits  test_splat.py  triangle.py
.github/workflows/: pypi-publish.yml  python-app.yml
Databases/: source_data.txt  spectral_data.txt
EvolutionaryModels/Baraffe/: cond_0.001  cond_1.000  cond_10.000
EvolutionaryModels/Burrows/: b97_0.010
Filters/: k_atm_mko.txt  mko_kp.txt  mko_ks.txt  nic1_f108n.txt  nic1_f145m.txt  nirc2-h.txt  nirc2-hcont.txt  nirc2-k.txt  wirc_ch4l.txt  wirc_ch4s.txt  wirc_hcont.txt  wirc_kcont.txt
Spectra/: 10005_11020.txt  10006_11159.txt  10007_11195.txt  10009_11343.txt  10013_11416.txt  10016_10874.fits  10016_10874.txt  10017_10945.txt  10019_11040.txt  10020_11100.fits  10021_11106.fits  10021_11106.txt  10023_11236.txt  10024_11252.txt  10026_11270.fits  10029_11479.fits  10031_11571.fits  10040_11190.fits  10051_10171.fits  10073_10263.fits  10073_10263.txt  10083_11665.txt  10091_10356.txt  10092_10394.txt  10107_10315.fits  10110_11057.fits  10119_11501.txt  10120_11596.fits  10124_10223.fits  10131_10091.fits  10131_10091.txt  10132_10096.fits  10133_10107.txt  10134_10149.fits  10136_10288.txt  10139_11407.txt  10140_11413.fits  10142_11517.txt  10146_10072.txt  10147_10105.txt  (+384 more)
_templates/: out.html
db/: biblibrary.bib  code_summary.txt  combined_data.txt  photometry_data.txt  publications.txt  source_data.csv  source_data.txt  spectral_data.csv  spectral_data.txt  splat_bibs.bib  testing.xlsx  ~$testing.xlsx
docs/: 1  3  4  Makefile  api.rst  bdevopar.rst  bugs.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt  splat.rst  splat_empirical.rst  splat_evolve.rst  splat_model.rst  splat_plot.rst  splat_simulate.rst
resources/: sources.csv
splat/: __init__.py  asteroid.py  citations.py  core.py  database.py  empirical.py  euclid.py  evolve.py  experimental.py  initialize.py  model.py  photometry.py  plot.py  quasar.py  simulate.py  utilities.py  web.py
splat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: display.css
templates/: input.html  out.html
tests/: __init__.py  splat_test.py  test_core.py  test_database.py  test_empirical.py  test_evolve.py  test_initialize.py  test_model.py  test_photometry.py  test_plot.py  test_utilities.py
tutorials/: asteroid_tutorial.ipynb  basic_spectral_analysis.ipynb  modeling.ipynb  quasar_tutorial.ipynb  spectral_database_query.ipynb  spectral_datasets.ipynb  splat_database_tools.ipynb  terrien2015_designations.csv  terrien2015_radec.csv
(+42437 files in other folders)
