[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splat"
version = "20250729"
readme = "README.md"
requires-python = ">=3.7"
license = {'file' = 'LICENSE'}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy",
    "astroquery",
    "scipy",
    "matplotlib",
    "numpy",
    "pandas",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.dat","*.fits"] # includes the data files in instrument_data/ and data/
