[build-system]
requires = ["setuptools","setuptools-scm","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splat"
#version = "20250729"
readme = "README.md"
requires-python = ">=3.7"
#license = {'file' = 'LICENSE'}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy",
    "astroquery",
    "scipy",
    "matplotlib",
    "numpy",
    "pandas",
    "importlib_resources; python_version < '3.11'",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest"
    ]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.dat","*.fits","*.csv","*.tst","*.css"] # includes the data files in instrument_data/ and data/

[tool.setuptools_scm]
